# .github

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compilation_report.md
.github/hello-paper/: main.tex
.github/hello-world/: pyproject.toml
.github/hello-world/book/: _config.yml
.github/hello-world/cvx/: hello.py
.github/hello-world/cvx/hello-world/: hello.py
.github/workflows/: book.yml  build.yml  ci.yml  coverage.yml  deptry.yml  jupyter.yml  latex.yml  pdoc.yml  pre-commit.yml  release.yml  test_pdoc.yml  test_python.yml  test_tex.yml
actions/age/: action.yml
actions/book/: action.yml
actions/coverage/: action.yml
actions/deptry/: action.yml
actions/docker/: action.yml
actions/docstr/: action.yml
actions/environment/: action.yml
actions/jupyter/: action.yml
actions/latex/: action.yml
actions/marimo/: action.yml
actions/pdoc/: action.yml
actions/publish/: action.yml
actions/release/: action.yml
actions/setup-environment/: action.yml
actions/sphinx/: action.yml
actions/tag/: action.yml
actions/test/: action.yml
age/: dependency-age-sorted.txt  dependency-age.txt
book/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  index.html
pdoc/: cvx.html  search.js
pdoc/cvx/: dog.html  hello.html
pdoc/cvx/dog/: demo.html
sphinx/: genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/_modules/: index.html
sphinx/autoapi/: index.html
tests/: test_dog.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
(+41 files in other folders)
