[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Thomas Schmelzer <thomas.schmelzer@gmail.com>"]
readme = "README.md"
packages = [{include = "cvx"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
